--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Shipwrecks -- South Atlantic Ocean'
 - !lcsh 'Castaways -- Atlantic Ocean'
 - !lcsh 'Australia (Brig)'
+- GITenberg
 title: "The Loss of the Australia\r\nA narrative of the loss of the brig Australia\
   \ by fire on her voyage from Leith to Sydney"
 url: http://www.gutenberg.org/ebooks/44480
